--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -26,6 +26,7 @@ services:
     volumes:
       - ./src:/code/src
       - ./src/manage.py:/code/manage.py
+      - model_data:/app/models
       - static_volume:/code/static
       - media_volume:/code/media
     depends_on:
@@ -53,6 +54,7 @@ services:
       - ./src:/code/src
       - ./src/manage.py:/code/manage.py
       - media_volume:/code/media
+      - model_data:/app/models
     depends_on:
       - db
       - redis
