--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,7 @@ services:
       - ./src/manage.py:/code/manage.py
       - static_volume:/code/static
       - media_volume:/code/media
+      - model_data:/app/models
     depends_on:
       - db
       - redis
@@ -95,6 +96,7 @@ services:
       - ./src:/code/src
       - ./src/manage.py:/code/manage.py
       - media_volume:/code/media
+      - model_data:/app/models
     depends_on:
       - db
       - redis
