--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ django-celery-beat==2.6.0
 django-celery-results==2.5.1
 django-redis==5.4.0
 django-debug-toolbar==4.4.2
+einops
 djangorestframework==3.15.2
 django-filter
 drf-extensions
