--- a/Dockerfile.model_downloader
+++ b/Dockerfile.model_downloader
@@ -2,7 +2,7 @@ FROM python:3.12-slim
 
 WORKDIR /app
 
-RUN pip install --no-cache-dir sentence-transformers einops
+RUN pip install --no-cache-dir sentence-transformers==3.1.0 einops
 
 COPY download_model.py .
 
