--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Byte-compiled / optimized / DLL files
 mdb/
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
+/research/sejm-stats-439117-39efc9d2f8b8.json
 # dependencies
 /node_modules
 /.pnp
