--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
+vertexai
 uvicorn==0.30.1
 gunicorn==22.0.0
 pgvector==0.3.5
-sentence-transformers==3.1.0
 django==5.0
 loguru==0.7.2
 requests==2.32.3
