Refactor environment variables and update credentials in Docker image and code

--- a/.env.dist
+++ b/.env.dist
@@ -8,3 +8,5 @@ SECRET_KEY=does_not_matter
 EMAIL_HOST_PASSWORD=only_used_when_debug_is_false
 BUILD_TARGET=dev
 C_FORCE_ROOT=true
+PATRONITE_API_TOKEN=""
+PATRONITE_API_URL="https://patronite.pl/author-api/"
