--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: Dockerfile.postgres
     volumes:
-      - postgres_data:/db/data
+      - postgres_data:/var/lib/postgresql/data
     env_file:
       - .env
 
