--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "express": "^4.21.1",
     "framer-motion": "^11.3.28",
     "fs": "^0.0.1-security",
     "highcharts": "^11.4.6",
@@ -48,6 +49,7 @@
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "node-fetch": "^3.3.2",
     "proj4": "^2.11.0",
     "promises": "^0.2.5",
     "react": "^18",
