Add tests for ActSectionsExtractor, refactor rate limiting, and update dependencies
- Introduced tests for ActSectionsExtractor to validate section content length and total sections.
- Refactored rate limiting decorator to restrict access based on referer.
- Updated requirements to include django-ratelimit.
- Changed sleep import from asyncio to time for better compatibility.
- Adjusted settings for DEBUG_TOOLBAR_CONFIG and CELERY_BEAT_SCHEDULE.

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ psycopg==3.1.19
 psycopg-binary==3.2.3
 wikipedia==1.4.0
 python-decouple==3.8
+django-ratelimit
 pytesseract==0.3.13
 pdfminer.six==20231228
 pdf2image==1.17.0
