--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ django-filter==24.3
 django-cors-headers==4.6.0
 psycopg-binary==3.2.3
 wikipedia==1.4.0
+pdfplumber==0.11.5
 python-decouple==3.8
 pytesseract==0.3.13
 pdfminer.six==20240706
