Remove version specifiers for pdfplumber and pdfminer.six in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,10 +13,10 @@ django-filter==24.3
 django-cors-headers==4.6.0
 psycopg-binary==3.2.3
 wikipedia==1.4.0
-pdfplumber~=0.11.5
+pdfplumber
 python-decouple==3.8
 pytesseract==0.3.13
-pdfminer.six~=20240706
+pdfminer.six
 pdf2image==1.17.0
 PyPDF2==3.0.1
 pydantic==2.9.2
