--- a/nginx.conf
+++ b/nginx.conf
@@ -17,6 +17,8 @@ http {
     sendfile on;
     keepalive_timeout 65;
 
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+
     server {
         listen 80;
         server_name sejm-stats.pl www.sejm-stats.pl;
@@ -68,13 +70,15 @@ http {
             proxy_busy_buffers_size 64k;
             proxy_buffer_size 16k;
         }
-    location /favicon.ico {
-        proxy_pass http://frontend:3000/favicon.ico;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+
+        location /favicon.ico {
+            proxy_pass http://frontend:3000/favicon.ico;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         location / {
             proxy_pass http://frontend:3000;
             proxy_set_header Host $host;
